--- a/raymarch.html
+++ b/raymarch.html
@@ -37,8 +37,14 @@
                 + sin(a*9.+time*2.)*0.02;
         }
 
+        float sdBox( vec3 p, vec3 b )
+{
+  vec3 q = abs(p) - b;
+  return length(max(q,0.0)) + min(max(q.x,max(q.y,q.z)),0.0);
+}
+
         vec2 map(in vec3 p) {
-            float d = thorus(p, 0.1);
+            float d = sdBox(p, 1.1);
             vec2 result = vec2(d, .1);
             return result;
         }
